# hexdump2

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml
src/hexdump2/: __init__.py  __main__.py  hexdump2.py
tests/: test_hexdump2.py
