[metadata]
name = hexdump2
version = file: src/hexdump2/VERSION
license = MIT
author = Hiss Grooms
author_email = hiss.grooms0q@icloud.com
url = https://github.com/HGrooms/hexdump2
project_urls =
    Source=https://github.com/HGrooms/hexdump2
    Issues=https://github.com/HGrooms/hexdump2/issues
    Changelog=https://github.com/HGrooms/hexdump2/CHANGELOG.md
description = An imperfect replica of hexdump -C
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir=
    =src
packages = find:
install_requires = colorama
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hexdump2 = hexdump2.__main__:main
    hd2 = hexdump2.__main__:main
